data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3382.wast
;; 1. **Test a Call within a Loop that Expects an Argument but Receives None**: Create a loop where a call is made to a function requiring one argument. Ensure no arguments are present on the stack. This tests argument presence and handling within loops.

(assert_invalid
  (module
    (func $requires_argument (param i32))
    (func $type-missing-argument-in-loop
      (loop (call $requires_argument))
    )
  )
  "type mismatch"
)